k8s/gatekeeper-templates/require-nodeselector.bak.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirenodeselector
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNodeSelector
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenodeselector

        violation[{"msg": msg}] {

          # Get the name of the namespace that the Pod is being deployed to
          ns := input.review.object.metadata.namespace
          #nsbusinessunit := get_namespace_businessunit_label(ns)
          #nodeselectorvalue := get_businessunit_nodeselector()
          not re_match("abc",ns)

          msg := sprintf("You must specify a businessunit nodeSelector on all Pods deployed to Namespaces that have a businessunit label %v",[ns])
        }

        get_namespace_businessunit_label(namespace) = new {
          new := data.inventory.cluster["v1"].Namespace[ns].metadata.labels["businessunit"]
        }

        get_businessunit_nodeselector() = new {
          new := input.review.object.spec.nodeSelector["businessunit"]
        }
